chore: add .npmrc to enforce pnpm usage and disable package-lock.json creation

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Package locks (keep package-lock.json for consistency)
+# Package locks (keep pnpm-lock.yaml for consistency)
 # yarn.lock
 
 # Build outputs
