feat(setup): overhaul setup process for simplified one-command installation and enhanced shell compatibility
refactor(security): remove container scanning functionality and update related documentation

docs(setup): document new setup commands and troubleshooting steps for improved user experience

chore(audit): complete extension and tool audit, removing unnecessary configurations and dependencies

fix(maintenance): archive old logs and configurations to streamline repository structure

cleanup(docker): remove all Docker and Podman references, transitioning to native development tooling

style(vscode): clean up VS Code tool configurations and update recommendations

--- a/.gitignore
+++ b/.gitignore
@@ -174,7 +174,9 @@ logs/
 .LSOverride
 
 # Archive exclusions
-# Keep archived content but exclude temporary archive processing
+# Keep archived content but exclude temporary archive processing and
+# exclude entire archive directory from validation/testing/review workflows
+archive/
 archive/.tmp/
 archive/*.processing
 archive/*.staging
