--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,7 +60,8 @@
   "files.exclude": {
     "**/.python-backups/**": true,
     "**/.markdown-backups/**": true,
-    "**/archive/**": false,
+    "**/archive/**": true,
+    "**/logs/**": true,
     "**/__pycache__/**": true,
     "**/node_modules/**": true,
     "**/.venv/**": true,
@@ -91,7 +92,8 @@
   "search.exclude": {
     "**/.python-backups/**": true,
     "**/.markdown-backups/**": true,
-    "**/archive/**": false,
+    "**/archive/**": true,
+    "**/logs/**": true,
     "**/__pycache__/**": true,
     "**/node_modules/**": true,
     "**/.venv/**": true,
@@ -105,6 +107,7 @@
     "**/.python-backups/**",
     "**/.markdown-backups/**",
     "archive/**",
+    "logs/**",
     "**/__pycache__/**",
     "**/node_modules/**",
     "**/.venv/**",
@@ -136,12 +139,26 @@
     "**/venv/**": true,
     "**/.git/**": true,
     "**/archive/**": true,
+    "**/logs/**": true,
     "**/dev/node/**": true,
     "**/packaging/**": true
   },
   "typescript.preferences.includePackageJsonAutoImports": "off",
   "typescript.suggest.autoImports": false,
+  "typescript.suggest.enabled": false,
+  "typescript.validate.enable": false,
+  "javascript.suggest.enabled": false,
+  "javascript.validate.enable": false,
+  "css.validate": false,
+  "html.validate.styles": false,
   "python.analysis.autoSearchPaths": false,
+  "python.linting.enabled": false,
+  "python.linting.pylintEnabled": false,
+  "python.linting.flake8Enabled": false,
+  "extensions.autoCheckUpdates": false,
+  "extensions.autoUpdate": false,
+  "search.maxResults": 1000,
+  "search.quickOpen.includeSymbols": false,
   "python.defaultInterpreterPath": "./.venv/bin/python",
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter"
