--- a/config/mypy.ini
+++ b/config/mypy.ini
@@ -13,6 +13,15 @@ warn_no_return = True
 warn_unreachable = True
 strict_equality = True
 
+# Exclude directories from type checking
+exclude = (?x)(
+    ^archive/.*$
+    |^logs/.*$
+    |^node_modules/.*$
+    |^\.venv/.*$
+    |^venv/.*$
+)
+
 # Exclude problematic modules
 [mypy-PyQt6.*]
 ignore_missing_imports = True
