Add comprehensive integration tests for Phase 2 components and optimize RKHunter settings
- Implemented extensive integration tests for the Phase 2 enhancements including Security Dashboard, Intelligent Automation, Advanced Reporting, API architecture, Deep Learning, and GPU Acceleration.
- Created a test script for RKHunter optimization functionality, verifying configuration and performance improvements.
- Developed tests for interactive optimization dialog integration in the Settings tab, ensuring all required modules are importable and functionality is operational.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -958,3 +958,12 @@ dev = [
     "flake8>=7.3.0",
     "prettier>=0.0.7",
 ]
+
+# Quality exceptions for scripts/tools/ utility scripts
+[tool.ruff.per-file-ignores]
+"scripts/tools/**/*.py" = [
+    "S603",    # subprocess call - acceptable for system tools
+    "S607",    # partial executable path - tools often use PATH lookup
+    "PLR0911", # too many returns - test utilities need multiple exits
+    "S108",    # hardcoded temp file - acceptable for debugging tools
+]
