feat: Complete Phase 2 modernization with unified architecture
Major consolidation and modernization effort including:

🏗️ **Architecture Modernization:**
- Consolidated 50+ modules into 7 unified frameworks
- Achieved 60-80% code reduction across all phases
- Implemented modern async/await patterns throughout
- Added enterprise-grade features and security

🔒 **Security Framework (Phase 2D):**
- Unified 6 security modules into enterprise security framework
- Added LDAP, SAML, OAuth2, MFA support
- Implemented comprehensive authorization engine
- Enhanced API security with threat detection

📊 **Monitoring System (Phase 2C):**
- Consolidated 6 monitoring files (5,961 → 1,327 lines, 77.8% reduction)
- Unified reporting with PDF, HTML, interactive dashboards
- GPU acceleration integration with CUDA/OpenCL support
- Real-time performance metrics and optimization

🧵 **Threading & Async (Phase 2B):**
- Consolidated 10 async files (4,815 → 1,000 lines, 79.2% reduction)
- Modern async/await patterns with cooperative cancellation
- PyQt6 GUI integration with progress tracking
- Resource coordination and deadlock prevention

⚙️ **Configuration Management (Phase 2A):**
- Unified configuration system with Pydantic validation
- Hot-reload capabilities with file monitoring
- Migration system for schema updates
- Backward compatibility shims

🧠 **Memory Management:**
- Unified memory management with intelligent caching
- LRU caching with TTL and priority support
- Automatic garbage collection and memory optimization
- Resource coordination across all systems

📁 **Repository Organization:**
- Root directory cleanup (70MB space savings)
- Moved 4 large PostScript files to archive
- Updated configuration references and paths
- Comprehensive archive organization

📚 **Documentation & Testing:**
- 15+ implementation reports and analysis documents
- Comprehensive test suites for all unified modules
- Migration guides and compatibility patterns
- Performance optimization examples

✨ **Key 

--- a/.markdownlintignore
+++ b/.markdownlintignore
@@ -1,5 +1,5 @@
 # Ignore backups and archives
 .markdown-backups/**
 archive/**
-modernization_plan/**
+archive/modernization_plan/**
 node_modules/**
