--- a/pyproject.toml
+++ b/pyproject.toml
@@ -509,7 +509,7 @@ addopts = [
     # Coverage reporting
     "--cov=app",
     "--cov-report=term-missing",
-    "--cov-report=html:htmlcov",
+    "--cov-report=html:archive/testing-coverage",
     "--cov-report=xml:coverage.xml",
     "--cov-branch",  # Include branch coverage
     "--cov-fail-under=80",  # Fail if coverage below 80%
@@ -536,7 +536,7 @@ testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
 python_classes = ["Test*", "*Tests"]
 python_functions = ["test_*"]
-norecursedirs = ["archive", "logs", ".git", ".venv", "venv", "node_modules", ".pytest_cache", "htmlcov"]
+norecursedirs = ["archive", "logs", ".git", ".venv", "venv", "node_modules", ".pytest_cache"]
 
 # Test markers for categorization
 markers = [
@@ -675,7 +675,7 @@ fail_under = 80
 
 [tool.coverage.html]
 # HTML report configuration
-directory = "htmlcov"
+directory = "archive/testing-coverage"
 title = "xanadOS Search & Destroy - Code Coverage Report"
 show_contexts = true
 skip_covered = false
