--- a/packaging/flatpak/io.github.asafelobotomy.SearchAndDestroy-optimized.yml
+++ b/packaging/flatpak/io.github.asafelobotomy.SearchAndDestroy-optimized.yml
@@ -1,7 +1,7 @@
 app-id: io.github.asafelobotomy.SearchAndDestroy
-runtime: org.freedesktop.Platform
-runtime-version: "23.08"
-sdk: org.freedesktop.Sdk
+runtime: org.kde.Platform
+runtime-version: "6.8"
+sdk: org.kde.Sdk
 base: com.riverbankcomputing.PyQt.BaseApp
 base-version: "6.8"
 command: search-and-destroy
