chore: remove test files and stale build logs
- Remove test.md (created during GPG signing test)
- Remove build-log.txt (stale, references old file paths)
- Update .gitignore to prevent test files and build logs from being committed
- Add patterns for test.md, test_*.md, build-log.txt, and related files

--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,15 @@ _build/
 _repo/
 build-dir/
 *.flatpak
+
+# Test files (prevent accidental commits)
+test.md
+test_*.md
+**/test-*.tmp
+test-output.txt
+
+# Build and log files
+build-log.txt
+*.build.log
+flatpak-build.log
+build-*.log
