fix: Remove AppImage from git and add to .gitignore (329MB exceeds GitHub limit)
- AppImage files are too large for GitHub's 100MB limit
- Added *.AppImage to .gitignore
- Removed xanadOS-Search-Destroy-3.0.0-x86_64.AppImage from tracking
- AppImage will remain in local releases/appimage/ directory
- Users can download from GitHub Releases instead

--- a/.gitignore
+++ b/.gitignore
@@ -219,6 +219,10 @@ _repo/
 build-dir/
 *.flatpak
 
+# AppImage builds (too large for GitHub)
+*.AppImage
+releases/appimage/*.AppImage
+
 # Test files (prevent accidental commits)
 test.md
 test_*.md
