Implement Real-Time Protection Optimizations and Testing Framework
- Added comprehensive documentation for Real-Time Protection optimizations, detailing phases 1 and 2, including caching, prioritization, starvation prevention, and pre-processing.
- Created new modules for scan result caching, smart file prioritization, and pre-processing with integrated testing.
- Developed a testing suite for real-time protection optimizations, ensuring functionality and performance metrics are met.
- Established a new integration test for phase 3 optimizations, focusing on YARA integration and system load monitoring.
- Updated installation guide to include new dependencies and installation methods for the application.
- Enhanced existing tests for real-time protection features, ensuring all optimizations are thoroughly validated.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -467,6 +467,8 @@ platform = "linux"
 mypy_path = ["app", "tests"]
 packages = ["app"]
 namespace_packages = true
+# Exclude directories from type checking
+exclude = '^(archive/|logs/|dev/|packaging/|scripts/)'
 
 # Untyped definitions
 disallow_untyped_calls = true
@@ -527,9 +529,6 @@ ignore_missing_imports = true
 [[tool.mypy.overrides]]
 module = ["tests.*", "dev.*", "archive.*"]
 ignore_errors = true
-
-# Exclude directories that are currently untyped to keep strict checks actionable
-exclude = '^(archive/|logs/|dev/|packaging/|scripts/)'
 
 [tool.pytest.ini_options]
 # Comprehensive test configuration
