--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -78,13 +78,14 @@ jobs:
                   # Generate requirements.txt for Safety
                   uv pip freeze > requirements-frozen.txt
 
-                  # Run Safety scan
-                  safety check --file requirements-frozen.txt --json --output safety-report.json
+                  # Run Safety scan (updated output format for Safety v3+)
+                  safety check --file requirements-frozen.txt --output json > safety-report.json || true
                   safety check --file requirements-frozen.txt
               continue-on-error: true
 
             - name: Upload Safety results
               uses: actions/upload-artifact@v4
+              if: always()
               with:
                   name: safety-results
                   path: safety-report.json
@@ -108,7 +109,7 @@ jobs:
                   severity: "CRITICAL,HIGH"
 
             - name: Upload Trivy results to GitHub Security tab
-              uses: github/codeql-action/upload-sarif@v3
+              uses: github/codeql-action/upload-sarif@v4
               with:
                   sarif_file: "trivy-results.sarif"
 
@@ -127,16 +128,16 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Initialize CodeQL
-              uses: github/codeql-action/init@v3
+              uses: github/codeql-action/init@v4
               with:
                   languages: ${{ matrix.language }}
                   queries: +security-extended,security-and-quality
 
             - name: Autobuild
-              uses: github/codeql-action/autobuild@v3
+              uses: github/codeql-action/autobuild@v4
 
             - name: Perform CodeQL Analysis
-              uses: github/codeql-action/analyze@v3
+              uses: github/codeql-action/analyze@v4
               with:
                   category: "/language:${{ matrix.language }}"
 
