fix: Phase 2 - Type checking improvements and logger fixes
TYPE CHECKING IMPROVEMENTS:

1. Installed Missing Type Stubs
   - Added types-psutil (7.1.3.20251211)
   - Added types-PyYAML (6.0.12.20250915)
   - Configured mypy to ignore yara/joblib (no official stubs)

2. Fixed Logger Method Typos (13 occurrences)
   - File: app/core/network_security.py
   - Fixed: self.logdebug() → self.logger.debug()
   - Fixed: self.logerror() → self.logger.error()
   - Fixed: self.logwarning() → self.logger.warning()
   - Fixed: self.loginfo() → self.logger.info()
   - Result: 22 correct logger calls

3. Fixed Type Annotation Errors
   - app/core/gui_auth_manager.py: any → Any (line 392)
   - app/utils/secure_random.py: any → Any (line 103)
   - Both files now use proper typing.Any

4. Updated mypy Configuration
   - Python version: 3.8 → 3.13 (matches runtime)
   - Added [mypy-yara.*] ignore_missing_imports
   - Added [mypy-joblib.*] ignore_missing_imports
   - Improved regex spacing (from Phase 1)

Impact:
• network_security.py: 13 logger errors → 3 type annotation issues (77% reduction)
• Overall mypy errors: Improved type coverage for psutil
• Module functionality: ✅ Verified working (imports & initializes)

Testing:
• NetworkSecurityManager: Imports successfully
• Logger methods: All 22 calls use correct attribute
• Type stubs: Installed and configured

Part of: Comprehensive Issue Audit Phase 2
See: COMPREHENSIVE_ISSUE_AUDIT.md

--- a/config/mypy.ini
+++ b/config/mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-python_version = 3.8
+python_version = 3.13
 warn_return_any = True
 warn_unused_configs = True
 disallow_untyped_defs = True
@@ -33,4 +33,10 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-packaging.*]
+ignore_missing_imports = True
+
+[mypy-yara.*]
+ignore_missing_imports = True
+
+[mypy-joblib.*]
 ignore_missing_imports = True
