docs: Add comprehensive Type Checking Remediation Plan (Phase 4)
Created strategic plan for addressing remaining 1,633 mypy errors:

Phase 4A - Quick Wins (2 hours, 304 errors):
  - Remove unreachable code (66 errors)
  - Fix type mismatches (126 errors)
  - Fix call arguments (69 errors)
  - Add variable annotations (43 errors)
  ROI: 152 errors/hour

Phase 4B - Systematic Cleanup (3 hours, 200 errors):
  - Fix union type access (97 errors)
  - Fix Any returns (51 errors)
  - Add remaining annotations (52 errors)

Phase 4C - Strategic Acceptance (documented):
  - Qt dynamic attributes (348 errors) - by design
  - Import stubs (73 errors) - already configured

Target: 71% total reduction from original 2,592 errors

Also fixed mypy.ini syntax errors (removed inline comments)

--- a/config/mypy.ini
+++ b/config/mypy.ini
@@ -2,11 +2,12 @@
 python_version = 3.13
 warn_return_any = True
 warn_unused_configs = True
-# Relax the strictest rules that generate most noise
-disallow_untyped_defs = False  # Changed from True - too noisy (634 errors)
+# Relaxed from True - reduces noise from functions without annotations
+disallow_untyped_defs = False
 disallow_incomplete_defs = True
 check_untyped_defs = True
-disallow_untyped_decorators = False  # Changed from True - many Qt decorators
+# Relaxed from True - many Qt decorators don't have types
+disallow_untyped_decorators = False
 no_implicit_optional = True
 warn_redundant_casts = True
 warn_unused_ignores = True
